Minor fixes for whitespace in footer

--- a/qlock5.css
+++ b/qlock5.css
@@ -46,7 +46,7 @@ footer {
 }
 
 footer span {
-/*	white-space: nowrap;*/
+	white-space: nowrap;
 }
 
 a {
